CHANGES IN VERSION 1.7.1
------------------------
 o add updateSynapterObject function [2014-04-23 Wed]
 o add loadSpectra and loadFragments method [2014-04-23 Wed]
 o add crossMatching, setCrossMatchingPpmTolerance and
   getCrossMatchingPpmTolerance method [2014-04-23 Wed]
 o add plotCrossMatching [2014-04-24 Thu]
 o add plotCrossMatchingFdr, plotCrossMatchingNonUniqueDiff [2014-04-24 Thu]

CHANGES IN VERSION 1.7.0
------------------------
 o new devel version for Bioc 3.0

CHANGES IN VERSION 1.6.0
------------------------
 o new release version for Bio 2.14

CHANGES IN VERSION 1.5.7
------------------------
 o Enable setting number of missed cleavages (closes #53) [2014-03-24 Mon]

CHANGES IN VERSION 1.5.6
------------------------
 o change the default value of grid.ppm.from to 2
   (was 5 before) [2014-03-05 Wed]
 o change the separator in GridDetails' names to ":"
   (was "." before) [2014-03-07 Fri]
 o test for corresponding Pep3D file (closes #42) [2014-03-19 Wed]

CHANGES IN VERSION 1.5.5
------------------------
 o fix a bug in the calculation of non unique matches in gridSearch2
   (part of searchGrid); results in a higher number of non unique matches
   (some of the reported -2 will now be reported as 2 in the grid details)
   [2014-03-05 Wed]
 o partial rewrite of gridSearch2 (part of searchGrid) for faster grid
   calculation [2014-03-04 Tue]

CHANGES IN VERSION 1.5.4
------------------------
 o biocViews update

CHANGES IN VERSION 1.5.3
------------------------
 o modified findMSeEMRTs (part of searchGrid) for faster grid
   calculation [2014-02-28 Fri]
 o typos in manual [2014-02-25 Tue]
 o replace readFasta by Biostrings::readAAStringSet [2014-02-25 Tue]
 o replace digest by cleaver::cleave [2014-02-25 Tue]

CHANGES IN VERSION 1.5.1
------------------------
 o typo in vignette [2014-02-18 Tue]

CHANGES IN VERSION 1.5.0
------------------------
 o new devel version for Bioc 2.14

CHANGES IN VERSION 1.3.4
------------------------